skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_pre_purge_banner.snap
---
source: tests/snapshot_overview.rs
expression: rendered
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session HT  ·  unknown  ·  daemon: file-mode  ·  uptime unknown  ·  Adhoc 0 · Issue 0 · Workflow 0  ·  fresh  $0.00 · 0 turns · in 0 / out 0                                     moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Live feed │ Conversations │ Decisions │ Costs │ Daemon                                                                                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ state schema warning ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                            Pre-purge state file detected (.issues without .entries). Re-init the session.                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ left rail ───────────────┐┌ sessions (0 tracked) ────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ detail ──────────────────────────────────┐"
"│Status                    ││Kind    State            Harness    Title          Cost           PR/worktree    Age      Decision                Activity    ││No session selected                       │"
"│no tracked entries        ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│Merge queue               ││                                                                                                                              ││                                          │"
"│empty                     ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│Conflicts                 ││                                                                                                                              ││                                          │"
"│no edges                  ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   D prune   g focus   / filter   ⇧M compact   ? help   q quit                                                                       noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
